# energy-data

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: publish.yml
assemble/: Cargo.toml
assemble/src/: assemble.rs  main.rs
parse/: Cargo.toml
parse/src/: excel.rs  lib.rs  util.rs  zip.rs
parse/src/ca_solar/: mapping.rs  mod.rs
parse/src/eia/: mapping.rs  mod.rs
parse/src/lbnl_solar/: mapping.rs  mod.rs  out.csv
parse/src/nj_solar/: adi.rs  mod.rs  srp.rs  ti.rs  util.rs
retrieve/: Cargo.toml
retrieve/src/: ca_solar.rs  eia.rs  http.rs  lbnl_solar.rs  lib.rs  nj_solar.rs
schema/: Cargo.toml
schema/src/: ca_solar.rs  eia.rs  lbnl_solar.rs  lib.rs  nj_solar.rs
storage/: Cargo.toml
storage/src/: database.rs  lib.rs
storage_derive/: Cargo.toml
storage_derive/src/: attrs.rs  lib.rs  schema.rs  types.rs  upsert.rs
