[package]
name = "retrieve"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
indicatif = { version = "0.17", features = ["tokio"] }
reqwest = { version = "0.11", default-features = false, features = ["stream", "rustls-tls-webpki-roots"] }
tokio = { version = "1.23", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }

parse = { version = "0.1", path = "../parse" }
